--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "JSON5 syntax",
     "description": "Adds syntax highlighting of JSON5 files",
     "version": "1.0.0",
-    "publisher": "katjanakosic",
+    "publisher": "KatjanaKosic",
     "license": "MIT",
     "engines": {
       "vscode": "^1.3.0"
