--- a/package.json
+++ b/package.json
@@ -2,37 +2,45 @@
     "name": "vscode-json5",
     "displayName": "JSON5 syntax extended",
     "description": "This extension extends the JSON5 syntax highlighting for keys and numbers.",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "publisher": "KatjanaKosic",
     "license": "MIT",
     "engines": {
-      "vscode": "^1.3.0"
+        "vscode": "^1.3.0"
     },
-  
-  "homepage": "https://github.com/katjanakosic/vscode-json5/blob/master/README.md",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/katjanakosic/vscode-json5"
-  },
-  "keywords": [
-    "json5",
-    "syntax",
-    "highlight"
-  ],
-  "categories": [
-    "Languages"
-  ],
-  "contributes": {
-    "languages": [{
-      "id": "json5",
-      "aliases": ["JSON5", "json5"],
-      "extensions": [".json5"],
-      "configuration": "./json5.configuration.json"
-    }],
-    "grammars": [{
-      "language": "json5",
-      "scopeName": "source.json5",
-      "path": "./syntaxes/json5.json"
-    }]
-  }
+    "homepage": "https://github.com/katjanakosic/vscode-json5/blob/master/README.md",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/katjanakosic/vscode-json5"
+    },
+    "keywords": [
+        "json5",
+        "syntax",
+        "highlight"
+    ],
+    "categories": [
+        "Languages"
+    ],
+    "contributes": {
+        "languages": [
+            {
+                "id": "json5",
+                "aliases": [
+                    "JSON5",
+                    "json5"
+                ],
+                "extensions": [
+                    ".json5"
+                ],
+                "configuration": "./json5.configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "json5",
+                "scopeName": "source.json5",
+                "path": "./syntaxes/json5.json"
+            }
+        ]
+    }
 }
