--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "This extension extends the JSON5 syntax highlighting for keys and numbers.",
     "version": "1.0.2",
     "publisher": "dimateos",
+    "author": "mrmlnc, KatjanaKosic, dimateos",
     "license": "MIT",
     "engines": {
         "vscode": "^1.3.0"
